# open-content-machine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: README.md
docs/: HANDOFF_TO_CEO.md  MVP_STATUS.md  PORTFOLIO_CASE_STUDY.md  architecture.md  build-in-public.md  classification.md  creator-intelligence-workflow.md  model-routing.md  privacy.md  private-workspace.md  product-requirements.md  real-data-runbook.md  release-gates-v0.1.0.md  source-approval-gate.md  threat-model.md  vision.md
examples/: README.md  intelligence-profile-synthetic.json  intelligence-signals-invalid.json  intelligence-signals-synthetic.json  synthetic-connections.csv
prompts/: README.md
schemas/: anonymized_connection.schema.json  audience_report.schema.json  classifier_comparison_report.schema.json  evaluation_report.schema.json  generate.py  inventory_entry.schema.json  public_report.schema.json  ranked_topic.schema.json  ranking_breakdown.schema.json  raw_connection.schema.json  reclassification_stats.schema.json  relevance_profile.schema.json  review_aggregate_report.schema.json  role_classification.schema.json  run_comparison.schema.json  source_inventory.schema.json  source_item.schema.json  source_reference.schema.json  topic_cluster.schema.json
tests/: conftest.py  test_anonymizer.py  test_classify.py  test_cli.py  test_cli_inspect.py  test_cli_source_inspect.py  test_compare.py  test_csv_loader.py  test_evaluate.py  test_normalize.py  (+16 more)
(+46 files in other folders)
