[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-content-machine"
version = "0.1.0"
description = "Local-first, privacy-by-design audience intelligence for content creators."
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Samuel Silva" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
anthropic = ["anthropic"]
openai = ["openai"]

[project.scripts]
content-machine = "content_machine.cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
content_machine = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["anthropic", "openai"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
